Update static web app route configuration

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,7 +1,18 @@
 {
   "routes": [
     {
-      "route": "/auth/login"
+      "route": "/auth/login",
+      "methods": [
+        "get",
+        "head",
+        "post",
+        "put",
+        "delete",
+        "connect",
+        "options",
+        "trace",
+        "patch"
+      ]
     }
   ]
 }
